--- a/package.json
+++ b/package.json
@@ -1,43 +1,8 @@
 {
-    "name": "weixin_server",
+    "name": "oauth2_server",
     "version": "1.0.0",
     "dependencies": {
-        "express": "3.2.6",
-        "log4js": "0.6.4",
-        "underscore": "1.4.4",
-        "mysql": "2.1.0",
-        "mysql-queues": "1.0.0",
-        "async": "0.2.9",
-        "passport": "0.1.17",
-        "ejs": "1.0.0",
-        "loader": "0.0.5",
-        "connect-flash": "~0.1.0",
-        "oauth2orize": "0.x.x",
-        "passport-local": "0.1.x",
-        "passport-http": "0.2.x",
-        "passport-http-bearer": "0.2.x",
-        "passport-oauth2-client-password": "0.1.x",
-        "connect-ensure-login": "0.1.x",
-        "mongodb": "*",
-        "mongoose": "~3.6.11",
-        "request": "2.25.0",
-        "q": "*",
-        "adm-zip": "*",
-        "connect-mongo": "*",
-        "urlencode": "*",
-        "iconv-lite": "*",
-        "bufferhelper": "*",
-        "handlebars": "*",
-        "commander": "*",
-        "easy-zip":"*",
-        "csv":"0.3.7",
-        "node-uuid":"1.4.0",
-        "underscore.string":"*",
-        "qr-image":"1.1.0",
-        "xlsjs":"0.7.0",
-        "oss-client":"0.4.0",
-        "moment":"2.0.0",
-        "wechat-toolkit": "~0.2.0"
+        "oauth2-server":"*"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
